--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta
-      charset="UTF-8"
-    />
+    <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>
-      Marijn |
-      Engineer • AI
-      Strategist •
-      Innovator
-    </title>
+    <title>Marijn | Engineer • AI Strategist • Innovator</title>
     <style>
       :root {
         --primary: #2d7d9a;
@@ -21,12 +14,7 @@
         --accent: #e4b363;
         --light: #f7f9f9;
         --dark: #333344;
-        --shadow: rgba(
-          0,
-          0,
-          0,
-          0.1
-        );
+        --shadow: rgba(0, 0, 0, 0.1);
       }
 
       * {
@@ -36,75 +24,48 @@
       }
 
       body {
-        font-family: "Inter",
-          sans-serif;
+        font-family: "Inter", sans-serif;
         line-height: 1.6;
-        color: var(
-          --dark
-        );
-        background-color: var(
-          --light
-        );
+        color: var(--dark);
+        background-color: var(--light);
       }
 
       a {
-        color: var(
-          --primary
-        );
+        color: var(--primary);
         text-decoration: none;
-        transition: color
-          0.3s;
+        transition: color 0.3s;
       }
 
       a:hover {
-        color: var(
-          --secondary
-        );
+        color: var(--secondary);
       }
 
       .container {
         max-width: 1200px;
-        margin: 0
-          auto;
-        padding: 0
-          2rem;
+        margin: 0 auto;
+        padding: 0 2rem;
       }
 
       .btn {
         display: inline-block;
-        background: var(
-          --primary
-        );
+        background: var(--primary);
         color: white;
-        padding: 0.5rem
-          1.5rem;
+        padding: 0.5rem 1.5rem;
         border-radius: 4px;
         font-weight: 500;
-        transition: all
-          0.3s ease;
+        transition: all 0.3s ease;
+        cursor: pointer;
       }
 
       .btn:hover {
-        background: var(
-          --secondary
-        );
-        transform: translateY(
-          -2px
-        );
-        box-shadow: 0
-          4px 8px
-          var(
-            --shadow
-          );
+        background: var(--secondary);
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px var(--shadow);
       }
 
       header {
         background: white;
-        box-shadow: 0
-          2px 10px
-          var(
-            --shadow
-          );
+        box-shadow: 0 2px 10px var(--shadow);
         position: sticky;
         top: 0;
         z-index: 100;
@@ -114,33 +75,23 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 1.5rem
-          0;
+        padding: 1.5rem 0;
       }
 
       .logo {
         font-size: 1.5rem;
         font-weight: 700;
-        color: var(
-          --dark
-        );
+        color: var(--dark);
       }
 
       .hero {
         display: flex;
         align-items: center;
-        padding: 6rem
-          0;
+        padding: 6rem 0;
         background: linear-gradient(
           135deg,
-          var(
-              --primary
-            )
-            0%,
-          var(
-              --secondary
-            )
-            100%
+          var(--primary) 0%,
+          var(--secondary) 100%
         );
         color: white;
         text-align: center;
@@ -160,118 +111,176 @@
       }
 
       section {
-        padding: 5rem
-          0;
+        padding: 5rem 0;
         text-align: center;
       }
 
       .blog-container {
         text-align: left;
         max-width: 800px;
-        margin: 0
-          auto;
+        margin: 0 auto;
+      }
+
+      /* Additional styling for login section */
+      #login-section {
+        background-color: #fff;
+        padding: 2rem;
+        box-shadow: 0 2px 10px var(--shadow);
+        max-width: 400px;
+        margin: 2rem auto;
+        border-radius: 5px;
+      }
+      #login-section input {
+        display: block;
+        width: 100%;
+        margin-bottom: 1rem;
+        padding: 0.5rem;
       }
     </style>
+
     <script>
-      async function loadBlogPosts() {
-        const response =
-          await fetch(
-            "https://personalsite-2xti.onrender.com/api/blogposts",
-          );
-        const posts =
-          await response.json();
-        const container =
-          document.getElementById(
-            "blog-posts",
-          );
-        container.innerHTML =
-          "";
-        posts.forEach(
-          (
-            post,
-          ) => {
-            const postElement =
-              document.createElement(
-                "div",
-              );
-            postElement.classList.add(
-              "blog-post",
-            );
-            postElement.innerHTML = `<h3>${post.title}</h3><p>${post.content}</p>`;
-            container.appendChild(
-              postElement,
-            );
-          },
-        );
+      // 1. LOGIN FUNCTION
+      async function loginUser() {
+        const username = document.getElementById("loginUsername").value;
+        const password = document.getElementById("loginPassword").value;
+
+        try {
+          const response = await fetch("https://personalsite-2xti.onrender.com/api/auth/login", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ username, password }),
+          });
+          const data = await response.json();
+
+          if (data.token) {
+            // Store token in localStorage
+            localStorage.setItem("token", data.token);
+            alert("Logged in successfully!");
+            // Reload blog posts to show delete buttons
+            loadBlogPosts();
+          } else {
+            alert("Login failed: " + (data.error || "Unknown error"));
+          }
+        } catch (error) {
+          console.error("Login error:", error);
+          alert("An error occurred during login.");
+        }
       }
-      document.addEventListener(
-        "DOMContentLoaded",
-        loadBlogPosts,
-      );
+
+      // 2. LOGOUT FUNCTION
+      function logoutUser() {
+        localStorage.removeItem("token");
+        alert("Logged out");
+        // Reload blog posts to hide delete buttons
+        loadBlogPosts();
+      }
+
+      // 3. DELETE POST FUNCTION
+      async function deletePost(postId) {
+        const token = localStorage.getItem("token");
+        if (!token) {
+          alert("You must be logged in to delete a post.");
+          return;
+        }
+
+        if (!confirm("Are you sure you want to delete this post?")) {
+          return;
+        }
+
+        try {
+          const response = await fetch(`https://personalsite-2xti.onrender.com/api/blogposts/${postId}`, {
+            method: "DELETE",
+            headers: {
+              Authorization: "Bearer " + token,
+            },
+          });
+
+          if (response.ok) {
+            alert("Post deleted successfully!");
+            loadBlogPosts();
+          } else {
+            const data = await response.json();
+            alert("Error deleting post: " + (data.error || response.statusText));
+          }
+        } catch (error) {
+          console.error("Delete error:", error);
+          alert("An error occurred while deleting the post.");
+        }
+      }
+
+      // 4. LOAD BLOG POSTS
+      async function loadBlogPosts() {
+        try {
+          const response = await fetch("https://personalsite-2xti.onrender.com/api/blogposts");
+          const posts = await response.json();
+          const container = document.getElementById("blog-posts");
+          container.innerHTML = "";
+
+          const token = localStorage.getItem("token");
+
+          posts.forEach((post) => {
+            const postElement = document.createElement("div");
+            postElement.classList.add("blog-post");
+
+            // Basic display
+            let html = `<h3>${post.title}</h3><p>${post.content}</p>`;
+
+            // If logged in, show a Delete button
+            if (token && post._id) {
+              html += `<button class="btn" onclick="deletePost('${post._id}')">Delete</button>`;
+            }
+
+            postElement.innerHTML = html;
+            container.appendChild(postElement);
+          });
+        } catch (error) {
+          console.error("Error loading blog posts:", error);
+          document.getElementById("blog-posts").innerHTML = "Error loading posts.";
+        }
+      }
+
+      // 5. INITIALIZE
+      document.addEventListener("DOMContentLoaded", loadBlogPosts);
     </script>
   </head>
   <body>
     <header>
-      <div
-        class="container"
-      >
+      <div class="container">
         <nav>
-          <a
-            href="#"
-            class="logo"
-            >Marijn</a
-          >
+          <a href="#" class="logo">Marijn</a>
+          <!-- Simple login/logout buttons in the nav (optional) -->
+          <div>
+            <button class="btn" onclick="logoutUser()">Logout</button>
+          </div>
         </nav>
       </div>
     </header>
 
-    <section
-      class="hero"
-    >
-      <div
-        class="container"
-      >
-        <h1>
-          Optimizing
-          AI, Data &
-          DevOps for
-          the Future
-        </h1>
+    <section class="hero">
+      <div class="container">
+        <h1>Optimizing AI, Data & DevOps for the Future</h1>
         <p>
-          Bridging
-          technology,
-          strategy,
-          and
-          innovation
-          to build
-          sustainable,
-          scalable
-          solutions.
+          Bridging technology, strategy, and innovation to build sustainable,
+          scalable solutions.
         </p>
-        <a
-          href="#contact"
-          class="btn"
-          >Get in
-          Touch</a
-        >
+        <a href="#contact" class="btn">Get in Touch</a>
       </div>
     </section>
 
-    <section
-      id="blog"
-    >
-      <div
-        class="container"
-      >
-        <h2>
-          Blog
-        </h2>
-        <div
-          id="blog-posts"
-        >
-          Loading
-          posts...
-        </div>
+    <!-- LOGIN SECTION -->
+    <section id="login-section">
+      <h2>Login</h2>
+      <input id="loginUsername" type="text" placeholder="Username" />
+      <input id="loginPassword" type="password" placeholder="Password" />
+      <button class="btn" onclick="loginUser()">Login</button>
+    </section>
+
+    <section id="blog">
+      <div class="container">
+        <h2>Blog</h2>
+        <div id="blog-posts">Loading posts...</div>
       </div>
     </section>
   </body>
