--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marijn | Engineer • AI Strategist • Innovator</title>
     <style>
       :root {
@@ -55,6 +52,7 @@
         font-weight: 500;
         transition: all 0.3s ease;
         cursor: pointer;
+        border: none;
       }
 
       .btn:hover {
@@ -88,11 +86,7 @@
         display: flex;
         align-items: center;
         padding: 6rem 0;
-        background: linear-gradient(
-          135deg,
-          var(--primary) 0%,
-          var(--secondary) 100%
-        );
+        background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
         color: white;
         text-align: center;
       }
@@ -106,8 +100,7 @@
         font-size: 1.2rem;
         margin-bottom: 2rem;
         max-width: 600px;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 0 auto;
       }
 
       section {
@@ -121,142 +114,68 @@
         margin: 0 auto;
       }
 
-      /* Additional styling for login section */
-      #login-section {
-        background-color: #fff;
-        padding: 2rem;
-        box-shadow: 0 2px 10px var(--shadow);
+      /* Modal styling */
+      .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4);
+      }
+      .modal-content {
+        background-color: #fefefe;
+        margin: 10% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 90%;
         max-width: 400px;
-        margin: 2rem auto;
         border-radius: 5px;
       }
-      #login-section input {
-        display: block;
-        width: 100%;
-        margin-bottom: 1rem;
-        padding: 0.5rem;
+      .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+      }
+      .close:hover,
+      .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+      }
+
+      /* Blog post styling */
+      .blog-post {
+        border-bottom: 1px solid #ccc;
+        padding: 1rem 0;
       }
     </style>
-
-    <script>
-      // 1. LOGIN FUNCTION
-      async function loginUser() {
-        const username = document.getElementById("loginUsername").value;
-        const password = document.getElementById("loginPassword").value;
-
-        try {
-          const response = await fetch("https://personalsite-2xti.onrender.com/api/auth/login", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ username, password }),
-          });
-          const data = await response.json();
-
-          if (data.token) {
-            // Store token in localStorage
-            localStorage.setItem("token", data.token);
-            alert("Logged in successfully!");
-            // Reload blog posts to show delete buttons
-            loadBlogPosts();
-          } else {
-            alert("Login failed: " + (data.error || "Unknown error"));
-          }
-        } catch (error) {
-          console.error("Login error:", error);
-          alert("An error occurred during login.");
-        }
-      }
-
-      // 2. LOGOUT FUNCTION
-      function logoutUser() {
-        localStorage.removeItem("token");
-        alert("Logged out");
-        // Reload blog posts to hide delete buttons
-        loadBlogPosts();
-      }
-
-      // 3. DELETE POST FUNCTION
-      async function deletePost(postId) {
-        const token = localStorage.getItem("token");
-        if (!token) {
-          alert("You must be logged in to delete a post.");
-          return;
-        }
-
-        if (!confirm("Are you sure you want to delete this post?")) {
-          return;
-        }
-
-        try {
-          const response = await fetch(`https://personalsite-2xti.onrender.com/api/blogposts/${postId}`, {
-            method: "DELETE",
-            headers: {
-              Authorization: "Bearer " + token,
-            },
-          });
-
-          if (response.ok) {
-            alert("Post deleted successfully!");
-            loadBlogPosts();
-          } else {
-            const data = await response.json();
-            alert("Error deleting post: " + (data.error || response.statusText));
-          }
-        } catch (error) {
-          console.error("Delete error:", error);
-          alert("An error occurred while deleting the post.");
-        }
-      }
-
-      // 4. LOAD BLOG POSTS
-      async function loadBlogPosts() {
-        try {
-          const response = await fetch("https://personalsite-2xti.onrender.com/api/blogposts");
-          const posts = await response.json();
-          const container = document.getElementById("blog-posts");
-          container.innerHTML = "";
-
-          const token = localStorage.getItem("token");
-
-          posts.forEach((post) => {
-            const postElement = document.createElement("div");
-            postElement.classList.add("blog-post");
-
-            // Basic display
-            let html = `<h3>${post.title}</h3><p>${post.content}</p>`;
-
-            // If logged in, show a Delete button
-            if (token && post._id) {
-              html += `<button class="btn" onclick="deletePost('${post._id}')">Delete</button>`;
-            }
-
-            postElement.innerHTML = html;
-            container.appendChild(postElement);
-          });
-        } catch (error) {
-          console.error("Error loading blog posts:", error);
-          document.getElementById("blog-posts").innerHTML = "Error loading posts.";
-        }
-      }
-
-      // 5. INITIALIZE
-      document.addEventListener("DOMContentLoaded", loadBlogPosts);
-    </script>
   </head>
   <body>
     <header>
       <div class="container">
         <nav>
           <a href="#" class="logo">Marijn</a>
-          <!-- Simple login/logout buttons in the nav (optional) -->
-          <div>
-            <button class="btn" onclick="logoutUser()">Logout</button>
-          </div>
+          <!-- Auth buttons: Will display "Login" or "Logout" based on user state -->
+          <div id="auth-buttons"></div>
         </nav>
       </div>
     </header>
+
+    <!-- Login Modal -->
+    <div id="login-modal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeLoginModal()">&times;</span>
+        <h2>Login</h2>
+        <input id="loginUsername" type="text" placeholder="Username" />
+        <input id="loginPassword" type="password" placeholder="Password" />
+        <button class="btn" onclick="loginUser()">Login</button>
+      </div>
+    </div>
 
     <section class="hero">
       <div class="container">
@@ -269,19 +188,239 @@
       </div>
     </section>
 
-    <!-- LOGIN SECTION -->
-    <section id="login-section">
-      <h2>Login</h2>
-      <input id="loginUsername" type="text" placeholder="Username" />
-      <input id="loginPassword" type="password" placeholder="Password" />
-      <button class="btn" onclick="loginUser()">Login</button>
-    </section>
-
     <section id="blog">
-      <div class="container">
+      <div class="container blog-container">
         <h2>Blog</h2>
         <div id="blog-posts">Loading posts...</div>
+        <!-- Section to add a new post; only visible if logged in -->
+        <div id="add-post-section" style="display: none; margin-top: 2rem;">
+          <h3>Add New Post</h3>
+          <input id="newPostTitle" type="text" placeholder="Title" /><br /><br />
+          <textarea id="newPostContent" placeholder="Content" rows="4" style="width:100%;"></textarea><br /><br />
+          <button class="btn" onclick="addPost()">Add Post</button>
+        </div>
       </div>
     </section>
+
+    <script>
+      // --- Authentication & UI Control Functions ---
+
+      // Update header buttons and post controls based on login state
+      function updateAuthButtons() {
+        const authButtons = document.getElementById("auth-buttons");
+        const token = localStorage.getItem("token");
+        if (token) {
+          authButtons.innerHTML =
+            '<button class="btn" onclick="logoutUser()">Logout</button>';
+          document.getElementById("add-post-section").style.display = "block";
+        } else {
+          authButtons.innerHTML =
+            '<button class="btn" onclick="openLoginModal()">Login</button>';
+          document.getElementById("add-post-section").style.display = "none";
+        }
+      }
+
+      // Open the login modal
+      function openLoginModal() {
+        document.getElementById("login-modal").style.display = "block";
+      }
+
+      // Close the login modal
+      function closeLoginModal() {
+        document.getElementById("login-modal").style.display = "none";
+      }
+
+      // Log in user by calling the server's /api/auth/login endpoint
+      async function loginUser() {
+        const username = document.getElementById("loginUsername").value;
+        const password = document.getElementById("loginPassword").value;
+        try {
+          const response = await fetch(
+            "https://personalsite-2xti.onrender.com/api/auth/login",
+            {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ username, password }),
+            }
+          );
+          const data = await response.json();
+          if (data.token) {
+            localStorage.setItem("token", data.token);
+            alert("Logged in successfully!");
+            closeLoginModal();
+            updateAuthButtons();
+            loadBlogPosts();
+          } else {
+            alert("Login failed: " + (data.error || "Unknown error"));
+          }
+        } catch (error) {
+          console.error("Login error:", error);
+          alert("An error occurred during login.");
+        }
+      }
+
+      // Log out by removing token from localStorage
+      function logoutUser() {
+        localStorage.removeItem("token");
+        alert("Logged out");
+        updateAuthButtons();
+        loadBlogPosts();
+      }
+
+      // --- Blog Posts Functions ---
+
+      // Load and display blog posts from the server
+      async function loadBlogPosts() {
+        try {
+          const response = await fetch(
+            "https://personalsite-2xti.onrender.com/api/blogposts"
+          );
+          const posts = await response.json();
+          const container = document.getElementById("blog-posts");
+          container.innerHTML = "";
+          const token = localStorage.getItem("token");
+          posts.forEach((post) => {
+            const postElement = document.createElement("div");
+            postElement.classList.add("blog-post");
+            let html = `<h3>${post.title}</h3><p>${post.content}</p>`;
+            // If logged in, add Edit and Delete buttons for each post
+            if (token && post._id) {
+              html += `<button class="btn" onclick="deletePost('${post._id}')">Delete</button> `;
+              html += `<button class="btn" onclick="editPost('${post._id}')">Edit</button>`;
+            }
+            postElement.innerHTML = html;
+            container.appendChild(postElement);
+          });
+        } catch (error) {
+          console.error("Error loading blog posts:", error);
+          document.getElementById("blog-posts").innerHTML =
+            "Error loading posts.";
+        }
+      }
+
+      // Add a new blog post (requires login)
+      async function addPost() {
+        const token = localStorage.getItem("token");
+        if (!token) {
+          alert("You must be logged in to add a post.");
+          return;
+        }
+        const title = document.getElementById("newPostTitle").value;
+        const content = document.getElementById("newPostContent").value;
+        try {
+          const response = await fetch(
+            "https://personalsite-2xti.onrender.com/api/blogposts",
+            {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+                Authorization: "Bearer " + token,
+              },
+              body: JSON.stringify({ title, content }),
+            }
+          );
+          if (response.ok) {
+            alert("Post added successfully!");
+            loadBlogPosts();
+          } else {
+            const data = await response.json();
+            alert("Error adding post: " + (data.error || response.statusText));
+          }
+        } catch (error) {
+          console.error("Error adding post:", error);
+          alert("Error adding post.");
+        }
+      }
+
+      // Delete a blog post (requires login)
+      async function deletePost(postId) {
+        const token = localStorage.getItem("token");
+        if (!token) {
+          alert("You must be logged in to delete a post.");
+          return;
+        }
+        if (!confirm("Are you sure you want to delete this post?")) return;
+        try {
+          const response = await fetch(
+            `https://personalsite-2xti.onrender.com/api/blogposts/${postId}`,
+            {
+              method: "DELETE",
+              headers: { Authorization: "Bearer " + token },
+            }
+          );
+          if (response.ok) {
+            alert("Post deleted successfully!");
+            loadBlogPosts();
+          } else {
+            const data = await response.json();
+            alert(
+              "Error deleting post: " +
+                (data.error || response.statusText)
+            );
+          }
+        } catch (error) {
+          console.error("Error deleting post:", error);
+          alert("Error deleting post.");
+        }
+      }
+
+      // Edit a blog post (simple prompt-based editing for demo purposes)
+      function editPost(postId) {
+        const newTitle = prompt("Enter the new title:");
+        const newContent = prompt("Enter the new content:");
+        if (newTitle && newContent) {
+          updatePost(postId, newTitle, newContent);
+        }
+      }
+
+      // Update a blog post (requires login; assumes server supports PUT on /api/blogposts/:id)
+      async function updatePost(postId, title, content) {
+        const token = localStorage.getItem("token");
+        if (!token) {
+          alert("You must be logged in to update a post.");
+          return;
+        }
+        try {
+          const response = await fetch(
+            `https://personalsite-2xti.onrender.com/api/blogposts/${postId}`,
+            {
+              method: "PUT",
+              headers: {
+                "Content-Type": "application/json",
+                Authorization: "Bearer " + token,
+              },
+              body: JSON.stringify({ title, content }),
+            }
+          );
+          if (response.ok) {
+            alert("Post updated successfully!");
+            loadBlogPosts();
+          } else {
+            const data = await response.json();
+            alert(
+              "Error updating post: " +
+                (data.error || response.statusText)
+            );
+          }
+        } catch (error) {
+          console.error("Error updating post:", error);
+          alert("Error updating post.");
+        }
+      }
+
+      // --- Initialization ---
+      document.addEventListener("DOMContentLoaded", () => {
+        updateAuthButtons();
+        loadBlogPosts();
+      });
+
+      // Close the login modal when clicking outside of its content
+      window.onclick = function (event) {
+        const modal = document.getElementById("login-modal");
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      };
+    </script>
   </body>
 </html>
